tests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
 --> $DIR/multiple.rs:8:18
  |
8 | #[spirv(sampler, sampler)]
  |                  ^^^^^^^
  |
note: previous intrinsic type attribute
 --> $DIR/multiple.rs:8:9
  |
8 | #[spirv(sampler, sampler)]
  |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:13:5
   |
13 | /     image_type(
14 | |         dim = "Dim2D",
15 | |         depth = 0,
16 | |         arrayed = 0,
...  |
19 | |         image_format = "Unknown"
20 | |     )
   | |_____^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:12:5
   |
12 |     sampler,
   |     ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:24:16
   |
24 | #[spirv(block, block)]
   |                ^^^^^
   |
note: previous #[spirv(block)] attribute
  --> $DIR/multiple.rs:24:9
   |
24 | #[spirv(block, block)]
   |         ^^^^^

warning: #[spirv(block)] is no longer needed and should be removed
  --> $DIR/multiple.rs:24:9
   |
24 | #[spirv(block, block)]
   |         ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:27:17
   |
27 | #[spirv(vertex, vertex)]
   |                 ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:27:9
   |
27 | #[spirv(vertex, vertex)]
   |         ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:30:17
   |
30 | #[spirv(vertex, fragment)]
   |                 ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:30:9
   |
30 | #[spirv(vertex, fragment)]
   |         ^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:35:22
   |
35 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |                      ^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:35:13
   |
35 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |             ^^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:36:22
   |
36 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |                      ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:36:13
   |
36 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |             ^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:38:23
   |
38 |     #[spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:38:13
   |
38 |     #[spirv(position, position)] _same_builtin: (),
   |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:39:23
   |
39 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:39:13
   |
39 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:41:33
   |
41 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:41:13
   |
41 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:42:33
   |
42 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:42:13
   |
42 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:44:26
   |
44 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:44:13
   |
44 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:45:26
   |
45 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:45:13
   |
45 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:47:19
   |
47 |     #[spirv(flat, flat)] _flat: (),
   |                   ^^^^
   |
note: previous #[spirv(flat)] attribute
  --> $DIR/multiple.rs:47:13
   |
47 |     #[spirv(flat, flat)] _flat: (),
   |             ^^^^

error: only one #[spirv(invariant)] attribute is allowed on a function param
  --> $DIR/multiple.rs:49:24
   |
49 |     #[spirv(invariant, invariant)] _invariant: (),
   |                        ^^^^^^^^^
   |
note: previous #[spirv(invariant)] attribute
  --> $DIR/multiple.rs:49:13
   |
49 |     #[spirv(invariant, invariant)] _invariant: (),
   |             ^^^^^^^^^

error: only one #[spirv(unroll_loops)] attribute is allowed on a function
  --> $DIR/multiple.rs:53:23
   |
53 | #[spirv(unroll_loops, unroll_loops)]
   |                       ^^^^^^^^^^^^
   |
note: previous #[spirv(unroll_loops)] attribute
  --> $DIR/multiple.rs:53:9
   |
53 | #[spirv(unroll_loops, unroll_loops)]
   |         ^^^^^^^^^^^^

error: aborting due to 16 previous errors; 1 warning emitted

